test/tests/errors/error-array-initially-unbound.sm
// true
// false
/**/
/**/

program {
    array x[0:4];
    output x[1];
}